--- a/sample-project/api/services/i18n/graphql/tsconfig.json
+++ b/sample-project/api/services/i18n/graphql/tsconfig.json
@@ -1,10 +1,10 @@
 {
-  "extends": "../../../../tsconfig",
+  "extends": "../../../../../tsconfig",
   "references": [
-    { "path": "../../../../packages/api-plugin-commodo-db-proxy" },
-    { "path": "../../../../packages/api-i18n" },
-    { "path": "../../../../packages/api-security" },
-    { "path": "../../../../packages/handler" },
-    { "path": "../../../../packages/handler-apollo-server" }
+    { "path": "../../../../../packages/api-plugin-commodo-db-proxy" },
+    { "path": "../../../../../packages/api-i18n" },
+    { "path": "../../../../../packages/api-security" },
+    { "path": "../../../../../packages/handler" },
+    { "path": "../../../../../packages/handler-apollo-server" }
   ]
 }
