--- a/packages/cwp-template-full/template/api/i18n/graphql/tsconfig.json
+++ b/packages/cwp-template-full/template/api/i18n/graphql/tsconfig.json
@@ -2,7 +2,7 @@
   "extends": "../../../../../tsconfig",
   "references": [
     { "path": "../../../../../packages/api-plugin-commodo-db-proxy" },
-    { "path": "../../../../../packages/api-headless-cms" },
+    { "path": "../../../../../packages/api-i18n" },
     { "path": "../../../../../packages/api-security" },
     { "path": "../../../../../packages/handler" },
     { "path": "../../../../../packages/handler-apollo-server" }
