--- a/packages/cwp-template-full/template/api/i18n/locales/package.json
+++ b/packages/cwp-template-full/template/api/i18n/locales/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "api-validate-access-token",
+  "name": "api-locales",
   "version": "0.1.0",
   "scripts": {
     "build": "webiny run build"
@@ -7,6 +7,6 @@
   "dependencies": {
     "@webiny/handler": "^0.1.0",
     "@webiny/api-plugin-commodo-db-proxy": "^2.0.4",
-    "@webiny/api-security": "^3.1.0"
+    "@webiny/api-i18n": "^3.0.4"
   }
 }
