chore: update publishConfig.directory

--- a/packages/i18n/package.json
+++ b/packages/i18n/package.json
@@ -33,7 +33,8 @@
     "glob": "^7.1.2"
   },
   "publishConfig": {
-    "access": "public"
+    "access": "public",
+    "directory": "dist"
   },
   "scripts": {
     "build": "rimraf ./dist *.tsbuildinfo && babel src -d dist --source-maps --copy-files --extensions \".ts,.tsx\"",
