chore: ⚡️  Fix references for ts.config.json

--- a/packages/cwp-template-cms/template/api/i18n/locales/tsconfig.json
+++ b/packages/cwp-template-cms/template/api/i18n/locales/tsconfig.json
@@ -1,8 +1,3 @@
 {
-  "extends": "../../../../../tsconfig",
-  "references": [
-    { "path": "../../../../../packages/api-plugin-commodo-db-proxy" },
-    { "path": "../../../../../packages/api-i18n" },
-    { "path": "../../../../../packages/handler" }
-  ]
+  "extends": "../../../../../tsconfig"
 }
