--- a/sample-project/api/i18n/graphql/package.json
+++ b/sample-project/api/i18n/graphql/package.json
@@ -5,10 +5,11 @@
     "build": "webiny run build"
   },
   "dependencies": {
-    "@webiny/handler": "^0.1.0",
-    "@webiny/handler-apollo-server": "^0.1.0",
-    "@webiny/api-plugin-commodo-db-proxy": "^2.0.4",
-    "@webiny/api-security": "^3.1.0",
-    "@webiny/api-i18n": "^3.0.3"
+    "@webiny/handler": "^4.0.0-beta.1",
+    "@webiny/handler-apollo-server": "^4.0.0-beta.1",
+    "@webiny/api-plugin-commodo-db-proxy": "^4.0.0-beta.1",
+    "@webiny/api-security": "^4.0.0-beta.2",
+    "@webiny/api-settings-manager": "^4.0.0-beta.1",
+    "@webiny/api-i18n": "^4.0.0-beta.2"
   }
 }
