--- a/sample-project/api/i18n/graphql/tsconfig.json
+++ b/sample-project/api/i18n/graphql/tsconfig.json
@@ -4,6 +4,7 @@
     { "path": "../../../../packages/api-plugin-commodo-db-proxy" },
     { "path": "../../../../packages/api-i18n" },
     { "path": "../../../../packages/api-security" },
+    { "path": "../../../../packages/api-settings-manager" },
     { "path": "../../../../packages/handler" },
     { "path": "../../../../packages/handler-apollo-server" }
   ]
