--- a/sample-project/api/i18n/locales/package.json
+++ b/sample-project/api/i18n/locales/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "@webiny/handler": "^4.0.0-beta.0",
     "@webiny/api-plugin-commodo-db-proxy": "^4.0.0-beta.0",
-    "@webiny/api-i18n": "^4.0.0-beta.0"
+    "@webiny/api-i18n": "^4.0.0-beta.0",
+    "@webiny/project-utils": "^4.0.0-beta.4"
   }
 }
