--- a/packages/cwp-template-cms/template/api/i18n/graphql/package.json
+++ b/packages/cwp-template-cms/template/api/i18n/graphql/package.json
@@ -5,11 +5,12 @@
     "build": "webiny run build"
   },
   "dependencies": {
-    "@webiny/handler": "^4.0.0-beta.1",
-    "@webiny/handler-apollo-server": "^4.0.0-beta.1",
-    "@webiny/api-plugin-commodo-db-proxy": "^4.0.0-beta.1",
-    "@webiny/api-security": "^4.0.0-beta.2",
-    "@webiny/api-settings-manager": "^4.0.0-beta.1",
-    "@webiny/api-i18n": "^4.0.0-beta.2"
+    "@webiny/handler": "^4.0.0-beta.0",
+    "@webiny/handler-apollo-server": "^4.0.0-beta.0",
+    "@webiny/api-plugin-commodo-db-proxy": "^4.0.0-beta.0",
+    "@webiny/api-security": "^4.0.0-beta.0",
+    "@webiny/api-settings-manager": "^4.0.0-beta.0",
+    "@webiny/api-i18n": "^4.0.0-beta.0",
+    "@webiny/project-utils": "^4.0.0-beta.4"
   }
 }
