--- a/api/i18n/graphql/package.json
+++ b/api/i18n/graphql/package.json
@@ -8,7 +8,9 @@
     "@webiny/handler": "^4.0.0-beta.0",
     "@webiny/handler-apollo-server": "^4.0.0-beta.0",
     "@webiny/api-plugin-commodo-db-proxy": "^4.0.0-beta.0",
+    "@webiny/api-plugin-security-cognito": "^4.6.0",
     "@webiny/api-security": "^4.0.0-beta.0",
+    "@webiny/api-security-permissions-manager": "^4.6.0",
     "@webiny/api-settings-manager": "^4.0.0-beta.0",
     "@webiny/api-i18n": "^4.0.0-beta.0",
     "@webiny/project-utils": "^4.0.0-beta.4"
