fix: update paths in tsconfig files and add pbInstallation.zip

--- a/api/code/i18n/graphql/tsconfig.json
+++ b/api/code/i18n/graphql/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "extends": "../../../tsconfig",
+  "extends": "../../../../tsconfig",
   "references": [
     { "path": "../../../../packages/api-plugin-commodo-dynamodb" },
     { "path": "../../../../packages/api-i18n" },
