chore: update dependencies

--- a/api/code/i18n/locales/tsconfig.json
+++ b/api/code/i18n/locales/tsconfig.json
@@ -2,6 +2,8 @@
   "extends": "../../../../tsconfig",
   "references": [
     { "path": "../../../../packages/api-i18n" },
-    { "path": "../../../../packages/handler" }
+    { "path": "../../../../packages/handler" },
+    { "path": "../../../../packages/handler-db" },
+    { "path": "../../../../packages/db-dynamodb" }
   ]
 }
